--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
+    "openai": "^4.17.4",
     "react": "^18",
     "react-code-blocks": "^0.1.4",
     "react-dom": "^18",
