--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@uiw/react-markdown-preview": "^4.2.2",
     "@uiw/react-textarea-code-editor": "^2.1.9",
     "class-variance-authority": "^0.7.0",
