--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "framer-motion": "^11.3.18",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
