--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "framer-motion": "^11.3.18",
+    "gpt-token-utils": "^1.2.0",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
